UtahLiveDataTest/src/objects/SiteVisit__c.object
<CustomObject>
    <fields>
        <fullName>StatePicklist__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK Alaska</fullName>
                </value>
                <value>
                    <fullName>AL Alabama</fullName>
                </value>
                <value>
                    <fullName>AR Arkansas</fullName>
                </value>
                <value>
                    <fullName>AZ Arizona</fullName>
                </value>
                <value>
                    <fullName>CA California</fullName>
                </value>
                <value>
                    <fullName>CO Colorado</fullName>
                </value>
                <value>
                    <fullName>CT Connecticut</fullName>
                </value>
                <value>
                    <fullName>DC District of Columbia</fullName>
                </value>
                <value>
                    <fullName>DE Delaware</fullName>
                </value>
                <value>
                    <fullName>FL Florida</fullName>
                </value>
                <value>
                    <fullName>GA Georgia</fullName>
                </value>
                <value>
                    <fullName>HI Hawaii</fullName>
                </value>
                <value>
                    <fullName>IA Iowa</fullName>
                </value>
                <value>
                    <fullName>ID Idaho</fullName>
                </value>
                <value>
                    <fullName>IL Illinois</fullName>
                </value>
                <value>
                    <fullName>IN Indiana</fullName>
                </value>
                <value>
                    <fullName>KS Kansas</fullName>
                </value>
                <value>
                    <fullName>KY Kentucky</fullName>
                </value>
                <value>
                    <fullName>LA Louisiana</fullName>
                </value>
                <value>
                    <fullName>MA Massachusetts</fullName>
                </value>
                <value>
                    <fullName>MD Maryland</fullName>
                </value>
                <value>
                    <fullName>ME Maine</fullName>
                </value>
                <value>
                    <fullName>MI Michigan</fullName>
                </value>
                <value>
                    <fullName>MN Minnesota</fullName>
                </value>
                <value>
                    <fullName>MO Missouri</fullName>
                </value>
                <value>
                    <fullName>MS Mississippi</fullName>
                </value>
                <value>
                    <fullName>MT Montana</fullName>
                </value>
                <value>
                    <fullName>NC North Carolina</fullName>
                </value>
                <value>
                    <fullName>ND North Dakota</fullName>
                </value>
                <value>
                    <fullName>NE Nebraska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State(Obsolete)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Report Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Planned and Submitted to Subrecipient</fullName>
                </value>
                <value>
                    <fullName>Visited</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Report Submitted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Submitted to Grantor</fullName>
                </value>
                <value>
                    <fullName>Reviewed by Grantor</fullName>
                </value>
                <value>
                    <fullName>Sent to Subrecipient</fullName>
                </value>
                <value>
                    <fullName>Feedback from Subrecipient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubAwardee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Awardee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubawardeeName__c</fullName>
        <formula>SubAwardee__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubawardeeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitForApproval__c</fullName>
        <formula>OR 
( 
(ISPICKVAL(Status__c,&apos;Report Submitted&apos;)), 
(ISPICKVAL(Status__c,&apos;Report Approved&apos;)), 
(ISPICKVAL(Status__c,&apos;Submitted to Grantor&apos;)) , 
(ISPICKVAL(Status__c,&apos;Created&apos;)) , 
(ISPICKVAL(Status__c,&apos;Planned&apos;)) , 
(ISBLANK(ProgramApprover__c)  ) 
)</formula>
        <label>Submit For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmittedOn__c</fullName>
        <label>Submitted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SupportingCommentsQuestion1__c</fullName>
        <label>Supporting Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SupportingCommentsQuestion2__c</fullName>
        <label>Supporting Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SupportingCommentsQuestion3__c</fullName>
        <label>Supporting Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TermConditionSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term Condition Schedule</label>
        <referenceTo>TermConditionSchedule__c</referenceTo>
        <relationshipLabel>Site Visits</relationshipLabel>
        <relationshipName>SiteVisits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TermandCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term and Condition</label>
        <referenceTo>TermCondition__c</referenceTo>
        <relationshipLabel>Site Visits</relationshipLabel>
        <relationshipName>Site_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <label>Test Field</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAwardAmount__c</fullName>
        <label>Total Award Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TypeofSiteVisit__c</fullName>
        <label>Type of Site Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Unplanned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitDateandTime__c</fullName>
        <description>Visit Start Date and Time</description>
        <inlineHelpText>Visit Start Date and Time</inlineHelpText>
        <label>Visit Start Date and Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitEndDateTime__c</fullName>
        <description>Visit End Date and Time</description>
        <inlineHelpText>Visit End Date and Time</inlineHelpText>
        <label>Visit End Date and Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Zip Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isApproved__c</fullName>
        <formula>ISPICKVAL(Status__c,&apos;Approved&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isStatusApproved__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Approved&apos;),ISPICKVAL(Status__c,&apos;Submitted to Grantor&apos;),ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isStatusApproved</label>
        <type>Checkbox</type>
    </fields>
    <label>Site Visit</label>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visits</pluralLabel>
    <recordTypes>
        <fullName>Grantee</fullName>
        <active>true</active>
        <description>Grantee</description>
        <label>Grantee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grantor</fullName>
        <active>true</active>
        <description>Grantor</description>
        <label>Grantor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>GeneralShare__c</fullName>
        <label>General Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>OwnerReplacement__c</fullName>
        <label>Owner Replacement</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoApprover__c</fullName>
        <label>Share to Approver</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharingforReviewandApproval__c</fullName>
        <label>SharingforReviewandApproval</label>
    </sharingReasons>
    <validationRules>
        <fullName>End_Date_Cannot_be_less_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>VisitEndDateTime__c  &lt;  VisitDateandTime__c</errorConditionFormula>
        <errorMessage>Visit End Date/Time cannot be Less than Visit Start Date/Time</errorMessage>
    </validationRules>
</CustomObject>